# ralpher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ralpher.prd.json  ralpher.toml  ralpher.toml.bak
product/: iterations.md  mission.md  prd.md  tech.md
src/: cli.rs  config.rs  engine.rs  event.rs  lib.rs  main.rs  policy.rs  prd_parser.rs  run.rs  task.rs  tui.rs  workspace.rs
tests/: abort.bintest.yaml  clean.bintest.yaml  config_agent.bintest.yaml  config_parsing.bintest.yaml  continue.bintest.yaml  continue_trunk.bintest.yaml  errors.bintest.yaml  help.bintest.yaml  no_config.bintest.yaml  start.bintest.yaml  status.bintest.yaml  validate.bintest.yaml  validate_fail.bintest.yaml  validate_multiple.bintest.yaml  validate_pass.bintest.yaml
