[package]
name = "ralpher"
version = "0.1.0"
edition = "2024"
description = "A TUI that cooks AI development plans to completion via iterative Ralph loops"
license = "MIT"
repository = "https://github.com/yourusername/ralpher"
readme = "README.md"
keywords = ["ai", "tui", "automation", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"
shell-words = "1"

[dev-dependencies]
tempfile = "3"
